# sorter-data

./: LICENSE  README.md  USO.md  pyproject.toml
src/sorter/: __init__.py  __main__.py  cli.py  config.py  duplicates.py  file_ops.py  metadata.py  organizer.py  preset_manager.py  validator.py
tests/: __init__.py  test_cli.py  test_config.py  test_duplicates.py  test_file_ops.py  test_metadata.py  test_validator.py
