[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sorter-data"
version = "1.0.0"
description = "Smart file organizer by metadata with duplicate detection"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "artyomRimbaud", email = "RufloNeruda@pm.me"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
sorter = "sorter.cli:main"

[project.urls]
Homepage = "https://github.com/artyomRimbaud/sorter-data"
Repository = "https://github.com/artyomRimbaud/sorter-data"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
